# brainfuck

./: .gitignore  Main.hs  README.md  brainfuck.cabal  setup.sh  stack.yaml
example-programs/: mandelbrodt.bf
interpreter/: Main.hs
src/: Brainfuck.hs  Compile.hs  Interpreter.hs  Lexer.hs  Optimizations.hs  Optimize.hs  Parser.hs  Run.hs
src/Compile/: CompileInput.hs
src/Compile/Linux/: Compile.hs  X86_64.hs
src/Compiler/: X86_64.hs
src/Interpret/: Interact.hs  StateMachine.hs
src/Interpreter/: Interact.hs  StateMachine.hs
src/Optimizations/: ForLoops.hs  MergeSetAndInc.hs  OptimizeCellResets.hs  PruneDeadLoops.hs  RemoveEmptyLoops.hs  RemoveInitialLoops.hs  RemoveZeroPointerInc.hs  RemoveZeroValueInc.hs  SquishIncPointer.hs  SquishIncValue.hs  SquishSetValue.hs
src/Optimize/: ForLoops.hs  MergeSetAndInc.hs  OptimizeCellResets.hs  PruneDeadLoops.hs  RemoveEmptyLoops.hs  RemoveInitialLoops.hs  RemoveZeroPointerInc.hs  RemoveZeroValueInc.hs  SquishIncPointer.hs  SquishIncValue.hs  SquishSetValue.hs
src/Test/: ForLoopTest.hs  Main.hs  OptimizationTest.hs  TestPrograms.hs
