name:                brainfuck
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/brainfuck#readme
license:             BSD3
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/Compiler
  exposed-modules:     Brainfuck
                     , Lexer
                     , Interpreter
                     , Compiler.X86_64
  build-depends:       base >= 4.7 && < 5
                     , word8
                     , parsec >= 3.1
                     , mtl
                     , process
  default-language:    Haskell2010

executable brainfuck
  hs-source-dirs:      interpreter
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , word8
                     , brainfuck
                     , parsec >= 3.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/brainfuck
