name:                brainfuck
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/axelulmestig/brainfuck#readme
license:             BSD3
-- license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/Compile
  exposed-modules:     Brainfuck
                     , Lexer
                     , Interpreter.Interact
                     , Interpreter.StateMachine
                     , Compile
                     , Compile.CompileInput
                     , Compile.Linux.X86_64
                     , Compile.Linux.Compile
                     , Optimizations
                     , Optimizations.ForLoops
                     , Optimizations.MergeSetAndInc
                     , Optimizations.OptimizeCellResets
                     , Optimizations.PruneDeadLoops
                     , Optimizations.RemoveEmptyLoops
                     , Optimizations.RemoveInitialLoops
                     , Optimizations.RemoveZeroPointerInc
                     , Optimizations.RemoveZeroValueInc
                     , Optimizations.SquishIncPointer
                     , Optimizations.SquishIncValue
                     , Optimizations.SquishSetValue
                     , Run
  build-depends:       base >= 4.7 && < 5
                     , word8
                     , parsec >= 3.1
                     , optparse-applicative >= 0.13
                     , filepath >= 1.4
                     , mtl
                     , process
                     , containers
                     , lens
                     , text
  default-language:    Haskell2010

executable brainfuck
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , word8
                     , brainfuck
                     , parsec >= 3.1
                     , optparse-applicative
                     , filepath
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/axelulmestig/brainfuck

Test-Suite TestSuite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/Test, src
  main-is:             Test/Main.hs
  build-depends:       base,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       word8,
                       parsec >= 3.1,
                       optparse-applicative >= 0.13,
                       filepath >= 1.4,
                       mtl,
                       process,
                       containers,
                       lens,
                       text
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -Wall
  other-modules:       Brainfuck
                       Interpreter.Interact
                       Interpreter.StateMachine
                       Lexer
                       ForLoopTest,
                       Optimizations
                       Optimizations.ForLoops
                       Optimizations.MergeSetAndInc
                       Optimizations.OptimizeCellResets
                       Optimizations.PruneDeadLoops
                       Optimizations.RemoveEmptyLoops
                       Optimizations.RemoveInitialLoops
                       Optimizations.RemoveZeroPointerInc
                       Optimizations.RemoveZeroValueInc
                       Optimizations.SquishIncPointer
                       Optimizations.SquishIncValue
                       Optimizations.SquishSetValue
                       OptimizationTest
                       TestPrograms
